[package]
name = "rustdemo"
version = "0.1.0"
authors = ["fChristenson <fredrik.christenson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
serde = "1.0.110"
serde_json = "1.0.53"
